fixed broken layout on some pages

--- a/Squares/Content/styles.scss
+++ b/Squares/Content/styles.scss
@@ -477,6 +477,10 @@ h2 {
     border: none;
 }
 
+.about .content-container section {
+    margin-top: 120px;
+}
+
 /* About END */
 
 /* Form START */
@@ -676,6 +680,33 @@ input:focus, textarea:focus {
     }
 }
 /* Accout Page END */
+
+/* Acc Management START */
+
+.AccountManagement h2 {
+    float: left;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.AccountManagement .btn {
+    clear: both;
+    float: left;
+    margin-top: 10px;
+    line-height: 55px;
+}
+
+.AccountManagement .btn:hover {
+    color: #fff;
+}
+
+.AccountManagement .feedback-input {
+    margin: 10px 0 0 0;
+}
+
+/* Acc Management END */
+
+
 
 /* Footer START */
 
